# ROS2-practice

./: README.md
my_python_pkg/: package.xml  setup.py
my_python_pkg/config/: amcl_params.yaml  collision_monitor_params.yaml  joystick_params.yaml  map_server_params.yaml
my_python_pkg/launch/: localization.launch.py
my_python_pkg/maps/: map.yaml
my_python_pkg/rviz/: localization.rviz
turtlebro_sim/: CMakeLists.txt  package.xml
turtlebro_sim/config/: loopback_sim.yaml
turtlebro_sim/launch/: sim_launch.yaml
turtlebro_sim/map/: map.yaml
