<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebro_sim</name>
  <version>0.0.1</version>
  <description>TODO</description>
  <maintainer email="zlobin-d@cs.msu.ru">Dmitry Zlobin</maintainer>
  <author email="zlobin-d@cs.msu.ru">Dmitry Zlobin</author>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_loopback_sim</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycel_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ros2topic</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
